{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 11,
  "lineage": "0e1d7542-73bc-bc6b-6a14-1cbf8ea46b1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "APP_EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07d0bc9072b0949b1",
            "public_dns": "ec2-54-203-215-237.us-west-2.compute.amazonaws.com",
            "public_ip": "54.203.215.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "COURSE_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cdd427ae9081783a",
            "owner_id": "237868853877",
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-IGW",
              "Product": "APPMOBILE"
            },
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "COURSE_NAT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d0bc9072b0949b1",
            "id": "nat-01db0da24204e00cb",
            "network_interface_id": "eni-055f9d56bfd22eea3",
            "private_ip": "10.12.0.113",
            "public_ip": "54.203.215.237",
            "subnet_id": "subnet-0e62f3897f092e904",
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-NGW",
              "Product": "APPMOBILE"
            }
          },
          "dependencies": [
            "aws_eip.APP_EIP",
            "aws_subnet.COURSE_PUBLIC_SUBNET",
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "COURSE_NACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 32766,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 23,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 23
              }
            ],
            "id": "acl-0b6550d848eaa53c3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 32766,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 23,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 23
              }
            ],
            "owner_id": "237868853877",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0e569b11184d26797",
              "subnet-0e62f3897f092e904"
            ],
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-NACL",
              "Product": "APPMOBILE"
            },
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_subnet.COURSE_PRIVATE_SUBNET",
            "aws_subnet.COURSE_PUBLIC_SUBNET",
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "COURSE_PRIVATE_ROUTE",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "COURSE_PUBLIC_ROUTE",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5e17c7ead6621c7",
            "owner_id": "237868853877",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdd427ae9081783a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-PUBLIC-RT",
              "Product": "APPMOBILE"
            },
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_internet_gateway.COURSE_IGW",
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRIVATE_ASSO",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUBLIC_ASSO",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0593e0db1e6ffe1e8",
            "route_table_id": "rtb-0c5e17c7ead6621c7",
            "subnet_id": "subnet-0e62f3897f092e904"
          },
          "dependencies": [
            "aws_internet_gateway.COURSE_IGW",
            "aws_route_table.COURSE_PUBLIC_ROUTE",
            "aws_subnet.COURSE_PUBLIC_SUBNET",
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "APP_ALB_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868853877:security-group/sg-054d22e4185c91be0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054d22e4185c91be0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009fe8e26e4690ab7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009fe8e26e4690ab7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ACTIVIDAD_03-ALB-SG",
            "name_prefix": null,
            "owner_id": "237868853877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-SG",
              "Product": "APPMOBILE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_security_group.APP_SG",
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "APP_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868853877:security-group/sg-009fe8e26e4690ab7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009fe8e26e4690ab7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.12.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ACTIVIDAD_03-SG",
            "name_prefix": null,
            "owner_id": "237868853877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-SG",
              "Product": "APPMOBILE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "COURSE_PRIVATE_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868853877:subnet/subnet-0e569b11184d26797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.12.0.128/25",
            "id": "subnet-0e569b11184d26797",
            "map_public_ip_on_launch": false,
            "owner_id": "237868853877",
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-SUBNET-AZ-B",
              "Product": "APPMOBILE"
            },
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "COURSE_PUBLIC_SUBNET",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868853877:subnet/subnet-0e62f3897f092e904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.12.0.0/25",
            "id": "subnet-0e62f3897f092e904",
            "map_public_ip_on_launch": true,
            "owner_id": "237868853877",
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-SUBNET-AZ-A",
              "Product": "APPMOBILE"
            },
            "vpc_id": "vpc-0bf3e40019cac98ac"
          },
          "dependencies": [
            "aws_vpc.COURSE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "COURSE_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868853877:vpc/vpc-0bf3e40019cac98ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/24",
            "default_network_acl_id": "acl-0b202508e9a85710a",
            "default_route_table_id": "rtb-060ff38e5dd4ec8f3",
            "default_security_group_id": "sg-00272f8bc505c72b8",
            "dhcp_options_id": "dopt-4370143b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bf3e40019cac98ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-060ff38e5dd4ec8f3",
            "owner_id": "237868853877",
            "tags": {
              "Environment": "ACTIVIDAD_03",
              "Name": "ACTIVIDAD_03-VPC",
              "Product": "APPMOBILE"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "COURSE_S3_ENDPOINT",
      "provider": "provider.aws"
    }
  ]
}